--- a/exercise/intro.html
+++ b/exercise/intro.html
@@ -3,6 +3,11 @@
 <head>
 <meta charset="utf-8">
 <title>簡介</title>
+<style>
+a:visited {background-color:#FFFF85;}
+a:hover {background-color:#FF704D;}
+a:active {background-color:#FF704D;} 
+</style>
 </head>
 <body>
 
