--- a/exercise/intro.html
+++ b/exercise/intro.html
@@ -2,21 +2,25 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>簡介</title>
+<title>個人履歷</title>
 <style>
 a:visited {background-color:#FFFF85;}
 a:hover {background-color:#FF704D;}
 a:active {background-color:#FF704D;} 
+ul.b {list-style-type:square;}
 </style>
+</head>
 </head>
 <body>
 
 <h1>個人履歷</h1>
-<p>姓名：陳羿勳</p>
-    <p>學歷：金門大學資訊工程系</p>
-	<p>生日：１９９９/０７/１８</p>
-	<p>性別：男性</p>
-	<a href="mailto:monster113080@gmail.com">信箱</a>
-	<p>電話：０９７７０１９４３０</p>
+<ul class="b">
+<li>姓名：陳羿勳</li>
+<li>學歷：金門大學資訊工程系</li>
+<li>生日：１９９９／０７／１８</li>
+<li>性別：男性</li>
+<li>href="mailto:monster113080@gmail.com">信箱</li>
+<li>電話：０９７７０１９４３０</li>
+</ul>
 </body>
 </html>
