--- a/exercise/intro.html
+++ b/exercise/intro.html
@@ -19,7 +19,7 @@ ul.b {list-style-type:square;}
 <li>學歷：金門大學資訊工程系</li>
 <li>生日：１９９９／０７／１８</li>
 <li>性別：男性</li>
-<li>href="mailto:monster113080@gmail.com">信箱</li>
+<a>href="mailto:monster113080@gmail.com">信箱</a>
 <li>電話：０９７７０１９４３０</li>
 </ul>
 </body>
