--- a/exercise/intro.html
+++ b/exercise/intro.html
@@ -12,7 +12,7 @@ ul.b {list-style-type:square;}
 </head>
 </head>
 <body>
-
+<center>
 <h1>個人履歷</h1>
 <ul class="b">
 <li>姓名：陳羿勳</li>
@@ -21,6 +21,7 @@ ul.b {list-style-type:square;}
 <li>性別：男性</li>
 <a>href="mailto:monster113080@gmail.com">信箱</a>
 <li>電話：０９７７０１９４３０</li>
+</center>
 </ul>
 </body>
 </html>
