--- a/exercise/intro.html
+++ b/exercise/intro.html
@@ -7,21 +7,37 @@
 a:visited {background-color:#FFFF85;}
 a:hover {background-color:#FF704D;}
 a:active {background-color:#FF704D;} 
-ul.b {list-style-type:square;}
+p.sansserif{font-family:Arial,Helvetica,sans-serif;}
+body
+{
+	background-color:aliceblue;
+}
 </style>
 </head>
 </head>
 <body>
 <center>
 <h1>個人履歷</h1>
-<ul class="b">
-<li>姓名：陳羿勳</li>
-<li>學歷：金門大學資訊工程系</li>
-<li>生日：１９９９／０７／１８</li>
-<li>性別：男性</li>
-<a>href="mailto:monster113080@gmail.com">信箱</a>
-<li>電話：０９７７０１９４３０</li>
+<table border="1"><p class="sansserif">
+	<tr>
+		<th>姓名</th>
+		<td>陳羿勳</td>
+	</tr>
+	<tr>
+		<th>學歷</th>
+		<td>金門大學資訊工程系</td>
+	</tr>
+	<tr>
+		<th>電話</th>
+		<td>0977019430</td>
+	</tr>
+	<tr>
+		<th>生日</th>
+		<td>1999/07/18</td>
+	</tr>	
+	</p>
+</table>
+<a href="mailto:monster113080@gmail.com">信箱</a>
 </center>
-</ul>
 </body>
 </html>
