--- a/project/2.html
+++ b/project/2.html
@@ -61,7 +61,7 @@ h3 {font-size:25px;}
 
 <ul>
   <li><a class="active" href="https://cdn.rawgit.com/yolo310250/wd106b/d43f8a8b/project/3.html">主頁</a></li>
-  <li><a 關於</a></li>
+  <li><a href="https://cdn.rawgit.com/yolo310250/wd106b/0d4083fd/project/2.html">關於</a></li>
   <li><a href="https://cdn.rawgit.com/yolo310250/wd106b/c57ff19e/project/4.html">新聞</a></li>
 </ul>
 <div class="container">
