--- a/project/3.html
+++ b/project/3.html
@@ -25,7 +25,7 @@
           <nav class="nav nav-masthead justify-content-center">
             <a class="nav-link active" href="#">主頁</a>
             <a class="nav-link" href="https://cdn.rawgit.com/yolo310250/wd106b/d43f8a8b/project/2.html">關於我</a>
-            <a class="nav-link"href="https://cdn.rawgit.com/yolo310250/wd106b/3b444085/project/4.html">新聞</a>
+            <a class="nav-link"href="./4.html">新聞</a>
           </nav>
         </div>
       </header>
