--- a/project/3.html
+++ b/project/3.html
@@ -24,7 +24,7 @@
           <h3 class="masthead-brand">Site</h3>
           <nav class="nav nav-masthead justify-content-center">
             <a class="nav-link active" href="#">主頁</a>
-            <a class="nav-link" href="https://cdn.rawgit.com/yolo310250/wd106b/d43f8a8b/project/2.html">關於我</a>
+            <a class="nav-link" href="./2.html">關於我</a>
             <a class="nav-link"href="./4.html">新聞</a>
           </nav>
         </div>
