--- a/project/2.html
+++ b/project/2.html
@@ -90,7 +90,7 @@ h3 {font-size:25px;}
       <h2>照片</h2>
     <ul class="slides">
       <li>
-        <img src="images/img1.jpg" />
+        <img src="./img1.jpg" />
       </li>
       <li>
         <img src="images/img2.jpg" />
