--- a/project/2.html
+++ b/project/2.html
@@ -93,13 +93,13 @@ h3 {font-size:25px;}
         <img src="./img1.jpg" />
       </li>
       <li>
-        <img src="images/img2.jpg" />
+        <img src="./img2.jpg" />
       </li>
       <li>
-        <img src="images/img3.jpg"/>
+        <img src="./img3.jpg"/>
       </li>
       <li>
-        <img src="images/img4.jpg"/>
+        <img src="./img4.jpg"/>
       </li>
     </ul>
   </div>
