--- a/project/3.html
+++ b/project/3.html
@@ -34,7 +34,7 @@
         <h1 class="cover-heading">Welcome!</h1>
         <p class="lead">這裡是賈伯斯的個人介紹網站</p>
         <p class="lead">
-            <a href="https://cdn.rawgit.com/yolo310250/wd106b/3b444085/project/2.html" target="_blank">Learn more</a>
+            <a href="./2.html" target="_blank">Learn more</a>
         </p>
       </main>
 
